# grimoire

./: .gitignore  .vercelignore  HERMES_LINKED_NOTES_INSTRUCTIONS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
.claude/: settings.json
api/: download.ts
docs/: CLI.md
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/crates/grimoire-cli/: Cargo.toml
src-tauri/crates/grimoire-cli/src/: main.rs
src-tauri/crates/grimoire-cli/tests/: cli.rs
src-tauri/crates/grimoire-core/: Cargo.toml
src-tauri/crates/grimoire-core/src/: edit.rs  frontmatter.rs  lib.rs  metadata.rs  path.rs  registry.rs  vault.rs
src-tauri/icons/: icon.icns
src-tauri/plugins/mobile-vault/: Cargo.toml  README.md  build.rs  package.json
src-tauri/plugins/mobile-vault/guest-js/: index.ts
src-tauri/plugins/mobile-vault/ios/: Package.swift  README.md
src-tauri/plugins/mobile-vault/ios/Sources/: MobileVaultPlugin.swift
src-tauri/plugins/mobile-vault/ios/Tests/PluginTests/: PluginTests.swift
src-tauri/plugins/mobile-vault/permissions/: default.toml
src-tauri/plugins/mobile-vault/permissions/autogenerated/: reference.md
src-tauri/plugins/mobile-vault/permissions/autogenerated/commands/: clear_vault_folder.toml  pick_external_notes.toml  pick_files.toml  pick_vault_folder.toml  restore_vault_folder.toml
src-tauri/plugins/mobile-vault/permissions/schemas/: schema.json
src-tauri/plugins/mobile-vault/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs
(+85 files in other folders)
