[package]
name = "grimoire-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "grimoire"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
grimoire-core = { path = "../grimoire-core" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["serde", "v7"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.20"
